app/client/style/home.css
/*
	General CSS
*/

* {
	font-family: Verdana;

	margin: 0;
	padding: 0;
}

body {
	position: absolute;
	background-color: black;
	overflow: auto;

	height: 100vh;
	width: 100%;

	margin: 0;
	padding: 0;
}

ul {
	list-style: none;
	overflow-y: auto;
}

.hidden { 
	display: none !important;
	visibility: hidden !important;
}

/*
	collapse button
*/

#collapse {
	position: fixed;
	top: 10px;
	left: 10px;

	z-index: 200;

	width: 50px;
	height: 50px;

	cursor: pointer;
}


/*
	thread-list
*/

#thread-list {
	height: 100%;
	width: 100%;

	background-color: darkgrey;
}

.pagination {
	font-weight: bold;
	cursor: pointer;

	position: fixed;

	cursor: pointer;
	display: inline-block;
	width: 100%;
}

.thread-top {
	top: 0;
	padding-bottom: 15px;
}

.thread-bot {
	bottom: 0;
	padding-top: 15px;
}

.thread {
	position: relative;
	font-size: 1.2em;

	text-align: center;

	height: 90vh;
	width: 100%;

	padding-top: 5vh;
	padding-bottom: 5vh;

	display: flex;
	flex-direction: column;

	background-color: rgb(180,180,180);
}

.thread-title {
	font-weight: bold;
	padding: 1em;

	cursor: pointer;
	z-index: 100;
}

.invite-list {
	flex: 1 0 0;
	/*background-color: blue;*/
}

.guest-list {
	flex: 1 0 0;
	/*background-color: green;*/
}

.guest-list img, .invite-list img {
	opacity: 0;
}

/*
	message-chain
*/

.message-chain {
	background-color: orange;
	position: relative;

	height: 0;

	text-align: left;

	display: flex;
	flex-direction: column;
}

.message-list {
	flex: 1 0 0;
}

.message {
	padding: 0.5em;
	min-height: 50px;
}

.message-pic {
	float: left;
	border-radius: 50%;
}

.message-time {
	font-size: 0.4em;
	float: right;
	color: gray;
}

.message-name, .message-text {
	font-size: 0.8em;
	padding-left: 60px;
}

.message-name {
	font-weight: bold;
	padding-bottom: 0.2em;
}

.message-form {
	margin-left: 60px;

	padding: 0.5em;
}

/*
@media all and (min-width: 600px) and (max-width: 1199px) {

	

}

@media all and (min-width: 1200px) {

	

}
*/

